--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,39 @@
-before_script:
+#before_script:
 # Install dependencies
-- bash ci/docker_install.sh > /dev/null
+#- bash ci/docker_install.sh > /dev/null
 
 # We test PHP7.3 (good luck with that)
-test:7.3:
-  image: php:7.3
+
+#test:7.3:
+#  image: php:7.3
+#  script:
+#  - phpunit --configuration phpunit_myapp.xml
+
+image: ruby:2.3
+
+cache:
+  paths:
+  - vendor/
+
+before_script:
+  - bundle install --path vendor
+
+pages:
+  stage: deploy
   script:
-  - phpunit --configuration phpunit_myapp.xml
+  - bundle exec jekyll build -d public
+  artifacts:
+    paths:
+    - public
+  only:
+  - master
+
+test:
+  stage: test
+  script:
+  - bundle exec jekyll build -d test
+  artifacts:
+    paths:
+    - test
+  except:
+  - master
