--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,9 @@
 
 image: ruby:2.3
 
-cache:
-  paths:
-  - vendor/
+#cache:
+#  paths:
+#  - vendor/
 
 before_script:
   - bundle install --path vendor
