--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,21 @@
-#before_script:
-# Install dependencies
-#- bash ci/docker_install.sh > /dev/null
+image: ruby:2.3
 
-# We test PHP7.3 (good luck with that)
-
-#test:7.3:
-#  image: php:7.3
-#  script:
-#  - phpunit --configuration phpunit_myapp.xml
-
-image: ruby:2.6
-
-#cache:
-#  paths:
-#  - vendor/
+variables:
+  JEKYLL_ENV: production
+  LC_ALL: C.UTF-8
 
 before_script:
-#  - bundle install --path vendor
-  - gem install jekyll bundler
   - bundle install
+
+test:
+  stage: test
+  script:
+  - bundle exec jekyll build -d test
+  artifacts:
+    paths:
+    - test
+  except:
+  - master
 
 pages:
   stage: deploy
@@ -29,41 +26,3 @@ pages:
     - public
   only:
   - master
-
-test:
-  stage: test
-  script:
-  - bundle exec jekyll build -d test
-  artifacts:
-    paths:
-    - test
-  except:
-  - maste
-
-#image: node:8.9.3
-
-#stages:
-#  - job1
-#  - test
-#  - production
-
-#job1:
-#  stage: job1
-#  script: "ls -l"
-
-#test:
-#  stage: test
-#  script: 
-#    - npm install
-
-#production:
-#  type: deploy
-#  stage: production
-#  image: ruby:latest
-#  script:
-#    - apt-get update -qy
-#    - apt-get install -y ruby-dev
-#    - gem install dpl
-#   - dpl --provider=heroku --app=quailapp --api-key=$HEROKU_PRODUCTION_API_KEY
-#  only:
-#    - master
